style/about.css
body {
/* This one is on testing phase
    margin: 0px;
*/
    margin: auto;
    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
    overflow: auto;
    background: linear-gradient(315deg, rgba(101,0,94,1) 3%, rgba(60,132,206,1) 38%, rgba(48,238,226,1) 68%, rgba(255,25,25,1) 98%);
    animation: gradient 15s ease infinite;
    background-size: 400% 400%;
    background-attachment: fixed;
}

@keyframes gradient {
    0% {
        background-position: 0% 0%;
    }
    50% {
        background-position: 100% 100%;
    }
    100% {
        background-position: 0% 0%;
    }
}

.wave {
    background: rgb(255 255 255 / 25%);
    border-radius: 1000% 1000% 0 0;
    position: fixed;
    width: 200%;
    height: 12em;
    animation: wave 10s -3s linear infinite;
    transform: translate3d(0, 0, 0);
    opacity: 0.8;
    bottom: 0;
    left: 0;
    z-index: -1;
}

.wave:nth-of-type(2) {
    bottom: -1.25em;
    animation: wave 18s linear reverse infinite;
    opacity: 0.8;
}

.wave:nth-of-type(3) {
    bottom: -2.5em;
    animation: wave 20s -1s reverse infinite;
    opacity: 0.9;
}

@keyframes wave {
    2% {
        transform: translateX(1);
    }

    25% {
        transform: translateX(-25%);
    }

    50% {
        transform: translateX(-50%);
    }

    75% {
        transform: translateX(-25%);
    }

    100% {
        transform: translateX(1);
    }
}

/* Styles for header */
header {
    margin: 0;
    background-color: #9ba8ab52;
    padding: 8px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-family: -webkit-body;
    width: 100%;
}

.headline {
    margin-left: 15px;
    font-family:'Open Sans', sans-serif;
}

.logo {
    font-size: 20px;
    font-weight: bold;
}

.logo img {
    max-height: 50px;
    max-width: 56px; /* Adjust the height of the logo as needed */
}

nav ul {
    list-style-type: none;
    padding:0;
    width: 100%;
    max-width: 50rem;
    margin: 0 auto;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

nav ul li {
    display: inline;
    margin-right: 20px;
}

nav ul li a {
    text-decoration: none;
    color: #FAFAFF;
    text-decoration: underline 0.15em rgba(255, 255, 255, 0);
    transition: text-decoration-color 300ms;
}

a:hover {
  text-decoration-color: rgba(255, 255, 255, 1);
}

.cta-button {
    background-color: #11212D;
    color: #CCD0CF;
    border: none;
    padding: 10px 20px;
    font-size: 16px;
    cursor: pointer;
    border-radius: 16px;
}

.cta-button:hover {
    background-color: #CCD0CF;
    color: #06141B;
}

/* Styling individual feature boxes */
.feature-box {
    background-color: #f2f2f2;
    border: 2px solid #ddd;
    border-radius: 8px;
    padding: 20px;
    width: 300px;
    text-align: center; /* Center text and icon */
}
  
/* Styling icons */
.feature-box i {
    font-size: 48px; /* Adjust size as needed */
    margin-bottom: 20px; /* Space between icon and text */
}
  
/* Styling headers */
.feature-box h2 {
    font-size: 1.5rem;
    margin-bottom: 10px;
}
  
/* Styling feature content */
.feature-content {
    text-align: left;
}
  
/* Styling paragraphs */
.feature-content p {
    font-size: 1rem;
    margin-bottom: 10px;
}
  
/* Styling unordered lists */
.feature-content ul {
    list-style-type: disc;
    padding-left: 20px;
}
  
/* Styling list items */
.feature-content li {
    font-size: 1rem;
    margin-bottom: 5px;
}

/* Styles for hero section */
.hero {
    text-align: center;
    padding: 100px 0;
}

.hero h1 {
    font-size: 36px;
    margin-bottom: 20px;
}

